--- a/wallet/api/api.toml
+++ b/wallet/api/api.toml
@@ -433,7 +433,7 @@ PATH = [
 ":view_address" = "Boolean"
 ":viewing_threshold" = "Integer"
 DOC = """
-Build, but do not submit, a sponsor transaction.
+Build, but do not submit, a sponsor transaction if the EQS is running.
 """
 
 [route.submitsponsor]
@@ -451,13 +451,13 @@ must be the same that were used to build the asset definition.
 [route.waitforsponsor]
 METHOD = "POST"
 PATH = [
-  "waitforsponsor/:asset",
-  "waitforsponsor/:asset/:timeout"
+  "waitforsponsor",
+  "waitforsponsor/:timeout"
 ]
-":asset" = "TaggedBase64"
 ":timeout" = "Integer"
 DOC = """
-Wait until the sponsor is reflected in the EQS.
+Wait until the sponsor is reflected in the EQS. Timeout after 60 seconds or the specified
+`:timeout` in seconds.
 """
 
 [route.updateasset]
