Update Espresso deps for 128-bit amounts

--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -26,7 +26,7 @@ doc = false
 [dependencies]
 anyhow = "1.0.39"
 arbitrary = { version = "1.0", features = ["derive"] }
-arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git" }
+arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git", tag = "0.2.2" }
 ark-bn254 = "0.3.0"
 ark-ec = "0.3.0"
 ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
@@ -50,26 +50,26 @@ generic-array = { version = "0.14.4", features = ["serde"] }
 hex = "0.4.3"
 itertools = "0.10.3"
 
-jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
-jf-plonk = { features = ["std", "test_apis"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
-jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
-jf-rescue = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
-jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
-key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.2" }
+jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.4" }
+jf-plonk = { features = ["std", "test_apis"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
+jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
+jf-rescue = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
+jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
+key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.3" }
 lazy_static = "1.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.14"
 rand = "0.8.4"
 rand_chacha = "0.3.1"
-reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.1" }
+reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
 regex = "1.5.5"
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "release-0.2" }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "jeb-amount" }
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.67"
 sha3 = "0.9.1"
 snafu = { version = "0.7", features = ["backtraces"] }
 strum_macros = "0.20.1"
-tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.1.0" }
+tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.0" }
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 
 # copied from jellyfish-apps
