--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -47,13 +47,14 @@ key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.3
 lazy_static = "1.4.0"
 markdown = "0.3"
 net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.2" }
+num-traits = "0.2"
 pipe = { version = "0.4" }
 rand = "0.8.4"
 rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
 regex = "1.5.4"
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "jeb-amount", features = ["testing"] }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "release-0.2", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
