--- a/wallet/official_assets/cape_v1_official_assets.toml
+++ b/wallet/official_assets/cape_v1_official_assets.toml
@@ -24,14 +24,14 @@ amount = 1000000
 viewing_key = 'AUDPUBKEY~pqwRF_LGHH6obb4iX72qo6PWy2Fo3D9wmfqgRnYjmakB'
 
 [[assets]]
-symbol = 'WGTH'
+symbol = 'CapeWGTH'
 description = 'Wrapped WETH on Goerli'
 icon = 'icons/WGTH.png'
 type = 'wrapped'
 contract = '0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6'
 
 [[assets]]
-symbol = 'DAI'
+symbol = 'CapeDAI'
 description = 'Wrapped DAI'
 icon = 'icons/DAI.png'
 type = 'wrapped'
@@ -40,7 +40,7 @@ contract = '0x11fE4B6AE13d2a6055C8D9cF65c55bac32B5d844'
 viewing_key = 'AUDPUBKEY~z1xFfj2B6dTdUn1tcyexZd8v8foMPDJibT8hrmXXkAhx'
 
 [[assets]]
-symbol = 'USDC'
+symbol = 'CapeUSDC'
 description = 'Wrapped USDC'
 icon = 'icons/USDC.png'
 type = 'wrapped'
@@ -51,7 +51,7 @@ viewing_key = 'AUDPUBKEY~A1EVmqt8rZc6ibPolJ0gVI-cUxTOark5L9e9TTEDt6G-'
 freezing_key = 'FREEZEPUBKEY~iCR07O3hlKc25lFd467Eqs3ZAF1ME1wT5aW9VqHa14e2'
 
 [[assets]]
-symbol = 'USDT'
+symbol = 'CapeUSDT'
 description = 'Wrapped USDT'
 icon = 'icons/USDT.png'
 type = 'wrapped'
