--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: cachix/cachix-action@v10
         with:
           name: espresso-systems-private
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
       - uses: actions/checkout@v2
         name: Checkout Repository
@@ -68,6 +68,9 @@ jobs:
       - name: Generate Docs
         run: nix-shell --run "prepend-timestamps make-doc"
 
+      - name: Build all executables
+        run: nix-shell --run "cargo build --release"
+
       - name: Generate Wallet
         run: ./target/release/export-wallet-api-docs --api ./wallet/api/api.toml --assets ./wallet/public/ ./doc/mdbook/book/wallet
 
@@ -78,9 +81,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./doc/mdbook/book/
           cname: cape.docs.espressosys.com
-
-      - name: Build all executables
-        run: nix-shell --run "cargo build --release"
 
       - name: Build demo geth data dir
         run: nix-shell --run "demo/initialize-demo-geth"
