--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -2,9 +2,9 @@ name: Slither Analysis
 
 on:
   push:
-    branches: [master]
+    branches:
+      - main
   pull_request:
-    branches: [master]
 
 jobs:
   analyze:
