--- a/slither.config.json
+++ b/slither.config.json
@@ -1,5 +1,4 @@
 {
   "filter_paths": "ERC20.sol|Token.sol|USDC|mocks|Test|RescueNonOptimized|BytesLib",
-  "detectors_to_exclude": "assembly,similar-names,too-many-digits,naming-convention,write-after-write,solc-version",
-  "sarif": "slither.sarif"
+  "detectors_to_exclude": "assembly,similar-names,too-many-digits,naming-convention,write-after-write,solc-version"
 }
