--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ pre-commit-hooks = {git = "https://github.com/Lucas-C/pre-commit-hooks"}
 black = "*"
 hdwallet = "^1.3.2"
 ipython = "^7.28.0"
-slither-analyzer = "^0.8.3"
+slither-analyzer = {git = "https://github.com/sveitser/slither", rev = "fix-sarif-empty-results"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
