--- a/.github/workflows/slow-tests.yml
+++ b/.github/workflows/slow-tests.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: cachix/cachix-action@v10
         with:
           name: espresso-systems-private
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
       - name: Potential broken submodules fix
         run: |
@@ -53,4 +53,4 @@ jobs:
           key: cape-v5-${{ hashFiles('Cargo.lock') }}
 
       - name: Run Tests
-        run: nix-shell --run "prepend-timestamps cape-test-geth-slow"
+        run: nix-shell --run "cape-test-geth-slow"
