--- a/wallet/official_assets/cape_demo_local_official_assets.toml
+++ b/wallet/official_assets/cape_demo_local_official_assets.toml
@@ -6,30 +6,18 @@
 # You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 [[assets]]
-symbol = 'CAPEDAO'
-description = 'Private CAPE DAO token'
-icon = 'icons/CAPEDAO.png'
-type = 'domestic'
-amount = 1000000
+symbol = 'CAPE'
+type = 'native'
 
 [[assets]]
-symbol = 'WGMI'
-description = 'WGMI DAO token'
-icon = 'icons/WGMI.png'
-type = 'domestic'
-amount = 1000000
-# The viewing key represents a hypothetical DAO admin.
-viewing_key = 'AUDPUBKEY~pqwRF_LGHH6obb4iX72qo6PWy2Fo3D9wmfqgRnYjmakB'
-
-[[assets]]
-symbol = 'CapeWGTH'
+symbol = 'capedWETH'
 description = 'Wrapped WETH on Goerli'
 icon = 'icons/WGTH.png'
 type = 'wrapped'
 contract = '0x71C95911E9a5D330f4D621842EC243EE1343292e'
 
 [[assets]]
-symbol = 'CapeDAI'
+symbol = 'capedDAI'
 description = 'Wrapped DAI'
 icon = 'icons/DAI.png'
 type = 'wrapped'
@@ -38,7 +26,7 @@ contract = '0x948B3c65b89DF0B4894ABE91E6D02FE579834F8F'
 viewing_key = 'AUDPUBKEY~z1xFfj2B6dTdUn1tcyexZd8v8foMPDJibT8hrmXXkAhx'
 
 [[assets]]
-symbol = 'CapeUSDC'
+symbol = 'capedUSDC'
 description = 'Wrapped USDC'
 icon = 'icons/USDC.png'
 type = 'wrapped'
