--- a/wallet/official_assets/cape_demo_local_official_assets.toml
+++ b/wallet/official_assets/cape_demo_local_official_assets.toml
@@ -15,6 +15,7 @@ description = 'Wrapped WETH on Goerli'
 icon = 'icons/WGTH.png'
 type = 'wrapped'
 contract = '0x71C95911E9a5D330f4D621842EC243EE1343292e'
+viewing_key = 'AUDPUBKEY~a0J7uXJcUxDnSONQamzF6bZXpTrvPeKHCGKLsFx9tQiI'
 
 [[assets]]
 symbol = 'capedDAI'
