--- a/wallet/official_assets/cape_v1_official_assets.toml
+++ b/wallet/official_assets/cape_v1_official_assets.toml
@@ -17,6 +17,7 @@ description = 'Wrapped WETH on Goerli'
 icon = 'icons/WGTH.png'
 type = 'wrapped'
 contract = '0xb4fbf271143f4fbf7b91a5ded31805e42b2208d6'
+viewing_key = 'AUDPUBKEY~a0J7uXJcUxDnSONQamzF6bZXpTrvPeKHCGKLsFx9tQiI'
 
 [[assets]]
 symbol = 'capedDAI'
