--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -12,6 +12,9 @@ authors = ["Espresso Systems <hello@espressosys.com>"]
 edition = "2021"
 license = "GPL-3.0-or-later"
 
+[features]
+slow-tests = []
+
 [[bin]]
 name = "faucet"
 path = "src/faucet.rs"
@@ -33,6 +36,7 @@ doc = false
 [dependencies]
 ark-std = "0.3.0"
 
+async-channel = "1.6"
 async-std = "1.10.0"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
