--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -38,6 +38,7 @@ ark-std = "0.3.0"
 
 async-channel = "1.6"
 async-std = "1.10.0"
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.0" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 cape_wallet = { path = "../wallet" }
