--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -12,6 +12,9 @@ authors = ["Espresso Systems <hello@espressosys.com>"]
 edition = "2021"
 license = "GPL-3.0-or-later"
 
+[features]
+slow-tests = []
+
 [[bin]]
 name = "faucet"
 path = "src/faucet.rs"
@@ -33,7 +36,9 @@ doc = false
 [dependencies]
 ark-std = "0.3.0"
 
+async-channel = "1.6"
 async-std = "1.10.0"
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.0" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 cape_wallet = { path = "../wallet" }
@@ -62,4 +67,6 @@ tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
+escargot = "0.5"
+portpicker = "0.1"
 tracing-test = "0.2.1"
