--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -38,7 +38,7 @@ ark-std = "0.3.0"
 
 async-channel = "1.6"
 async-std = "1.10.0"
-atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.0" }
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.3" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 cape_wallet = { path = "../wallet" }
@@ -53,7 +53,7 @@ net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.2" }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.5" }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "mathis-atomicstore-0.1.3" }
 serde = "1.0.136"
 serde_json = "1.0.67"
 snafu = "0.7.0"
