--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -53,7 +53,7 @@ net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.2" }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "mathis-atomicstore-0.1.3" }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.6" }
 serde = "1.0.136"
 serde_json = "1.0.67"
 snafu = "0.7.0"
