--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -54,7 +54,8 @@ rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
 regex = "1.5.4"
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.6", features = ["testing"] }
+# TODO switch to seahorse release
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", rev = "c6d3ce4f0f87f92ee18eb3f3e06af7299feb7dcb", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
