--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -53,8 +53,7 @@ net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.2" }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
-# TODO switch to seahorse release
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", rev = "c6d3ce4f0f87f92ee18eb3f3e06af7299feb7dcb" }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.7" }
 serde = "1.0.136"
 serde_json = "1.0.67"
 snafu = "0.7.0"
