Apply CODEOWNERS suggestions from code review
Co-authored-by: Mathis <sveitser@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,8 +7,7 @@
 #    https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 # for more details.
 
-* @alxiong @philippecamacho @sveitser
-/wallet/ @jbearer @shenkeyao
-/relayer/ @nyospe
-/doc/ @pictographer
+* @philippecamacho @sveitser
+/wallet/ @bfish713 @shenkeyao
+/eqs/ @nyospe
 /.github/ @Ancient123
